# orion

./: .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  setup.cfg  start.sh
.github/workflows/: push.yaml
orion/: asgi.py  settings.py  urls.py  wsgi.py
templates/: _base.html  account_action.html  audit_log.html  change_password.html  dashboard.html  login.html  two_factor_setup.html  two_factor_verify.html
web/: apps.py  audit.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
web/migrations/: 0001_initial.py  0002_remove_auditlog_valid_event_type_and_more.py  0003_remove_auditlog_valid_event_type_and_more.py  0004_remove_auditlog_valid_event_type_and_more.py  0005_remove_auditlog_valid_event_type_and_more.py  0006_remove_auditlog_valid_event_type_auditlog_ip_address_and_more.py  0007_remove_auditlog_valid_event_type_and_more.py
